--- a/sito/index.html
+++ b/sito/index.html
@@ -39,14 +39,14 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="tt nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="tt nav-item">
-            <a class="nav-link" href="./pagine/materie.html">Materie</a>
+            <a class="nav-link" href="/pagine/materie.html">Materie</a>
           </li>
         </li>
         <li class="tt nav-item">
-          <a class="nav-link" href="./pagine/scratch.html">Scratch</a>
+          <a class="nav-link" href="/pagine/scratch.html">Scratch</a>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
@@ -84,11 +84,11 @@
     <div class="row">
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="./img/Materie.jpg" class="img card-img-top" alt="...">
+          <img src="/img/Materie.jpg" class="img card-img-top" alt="...">
           <div class="card-body">
             <h5 class="ii card-title text-decoration-underline">Materie</h5>
             <p class="pp card-text">le materie di luca Campofelice 2bi</p>
-            <a href="./pagine/materie.html" class="bb btn btn-primary">Vai a Materie</a>
+            <a href="/pagine/materie.html" class="bb btn btn-primary">Vai a Materie</a>
           </div>
         </div>
       </div>
@@ -104,11 +104,11 @@
       </div> -->
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="./img/logo_sm.png" class="img card-img-top" alt="...">
+          <img src="/img/scratch.png" class="img card-img-top" alt="...">
           <div class="card-body">
             <h5 class="ii card-title text-decoration-underline">Scratch</h5>
             <p class="pp card-text">i pregetti su scratch</p>
-            <a href="./pagine/scratch.html" class="bb btn btn-primary">vai a Scratch</a>
+            <a href="/pagine/scratch.html" class="bb btn btn-primary">vai a Scratch</a>
           </div>
         </div>
       </div>
