--- a/sito/pagine/materie.html
+++ b/sito/pagine/materie.html
@@ -31,14 +31,14 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="tt nav-item">
-            <a class="nav-link " aria-current="page" href="../index.html">Home</a>
+            <a class="nav-link " aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="tt nav-item">
-            <a class="nav-link active" href="./materie.html">Materie</a>
+            <a class="nav-link active" href="/pagine/materie.html">Materie</a>
           </li>
         </li>
         <li class="tt nav-item">
-          <a class="nav-link" href="./scratch.html">Scratch</a>
+          <a class="nav-link" href="/pagine/materie.html">Scratch</a>
         </li>
 
         <div class="materie">
@@ -47,19 +47,19 @@
             materie:
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item active" href="../materie.html">Materie</a></li>
-            <li><a class="dropdown-item" href="./pag materie/Alternativa.html">Alternativa</a></li>
-            <li><a class="dropdown-item" href="./pag materie/Biologia.html">Biologia</a></li>
-            <li><a class="dropdown-item" href="./pag materie/Chimica.html">Chimica</a></li>
-            <li><a class="dropdown-item" href="./pag materie/Diritto.html">Diritto</a></li>
-            <li><a class="dropdown-item" href="./pag materie/Educazione Civica.html">Educazione Civica</a></li>
-            <li><a class="dropdown-item" href="./pag materie/Fisica.html">Fisica</a></li>
-            <li><a class="dropdown-item" href="./pag materie/Inglese.html">Inglese</a></li>
-            <li><a class="dropdown-item" href="./pag materie/Italiano.html">Italiano</a></li>
-            <li><a class="dropdown-item" href="./pag materie/Matematica.html">Matematica</a></li>
-            <li><a class="dropdown-item" href="./pag materie/Religione.html">Religione</a></li>
-            <li><a class="dropdown-item" href="./pag materie/T.T.Rapp.Grafica.html">T.T.Rapp.grafica</a></li>
-            <li><a class="dropdown-item" href="./pag materie/Scienze Tecniche Applicate.html">Scienze Tecniche Applicate</a></li>
+            <li><a class="dropdown-item active" href="/pagine/materie.html">Materie</a></li>
+            <li><a class="dropdown-item" href="/pagine/pag-materie/Alternativa.html">Alternativa</a></li>
+            <li><a class="dropdown-item" href="/pagine/pag-materie/Biologia.html">Biologia</a></li>
+            <li><a class="dropdown-item" href="/pagine/pag-materie/Chimica.html">Chimica</a></li>
+            <li><a class="dropdown-item" href="/pagine/pag-materie/Diritto.html">Diritto</a></li>
+            <li><a class="dropdown-item" href="/pagine/pag-materie/Educazione-Civica.html">Educazione Civica</a></li>
+            <li><a class="dropdown-item" href="/pagine/pag-materie/Fisica.html">Fisica</a></li>
+            <li><a class="dropdown-item" href="/pagine/pag-materie/Inglese.html">Inglese</a></li>
+            <li><a class="dropdown-item" href="/pagine/pag-materie/Italiano.html">Italiano</a></li>
+            <li><a class="dropdown-item" href="/pagine/pag-materie/Matematica.html">Matematica</a></li>
+            <li><a class="dropdown-item" href="/pagine/pag-materie/Religione.html">Religione</a></li>
+            <li><a class="dropdown-item" href="/pagine/pag-materie/T.T.Rapp.Grafica.html">T.T.Rapp.grafica</a></li>
+            <li><a class="dropdown-item" href="/pagine/pag-materie/Scienze-Tecniche-Applicate.html">Scienze Tecniche Applicate</a></li>
           </ul>
         </li>
         </div>
@@ -101,7 +101,7 @@ tt
         <div class="card-body">
           <h5 class="tt card-title">Alternativa</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./pag materie/Alternativa.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
+          <a href="/pagine/pag-materie/Alternativa.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
         </div>
       </div>
     </div>
@@ -111,7 +111,7 @@ tt
         <div class="card-body">
           <h5 class="tt card-title">Biologia</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./pag materie/Biologia.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
+          <a href="/pagine/pag-materie/Biologia.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
         </div>
       </div>
     </div>
@@ -121,7 +121,7 @@ tt
         <div class="card-body">
           <h5 class="tt card-title">Chimica</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./pag materie/Chimica.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
+          <a href="/pagine/pag-materie/Chimica.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@ tt
         <div class="card-body">
           <h5 class="tt card-title">Diritto</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./pag materie/Diritto.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
+          <a href="/pagine/pag-materie/Diritto.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
         </div>
       </div>
     </div>
@@ -141,7 +141,7 @@ tt
         <div class="card-body">
           <h5 class="tt card-title">Educazione Civica</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./pag materie/Educazione Civica.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
+          <a href="/pagine/pag-materie/Educazione-Civica.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
         </div>
       </div>
     </div>
@@ -151,7 +151,7 @@ tt
         <div class="card-body">
           <h5 class="tt card-title">Fisica</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./pag materie/Fisica.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
+          <a href="/pagine/pag-materie/Fisica.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
         </div>
       </div>
     </div>
@@ -161,7 +161,7 @@ tt
         <div class="card-body">
           <h5 class="tt card-title">Inglese</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./pag materie/Inglese.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
+          <a href="/pagine/pag-materie/Inglese.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
         </div>
       </div>
     </div>
@@ -171,7 +171,7 @@ tt
         <div class="card-body">
           <h5 class="tt card-title">Italiano</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./pag materie/Italiano.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
+          <a href="/pagine/pag-materie/Italiano.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
         </div>
       </div>
     </div>
@@ -181,7 +181,7 @@ tt
         <div class="card-body">
           <h5 class="tt card-title">Matematica</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./pag materie/Matematica.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
+          <a href="/pagine/pag-materie/Matematica.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
         </div>
       </div>
     </div>
@@ -191,7 +191,7 @@ tt
         <div class="card-body">
           <h5 class="tt card-title">Religione</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./pag materie/Religione.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
+          <a href="/pagine/pag-materie/Religione.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
         </div>
       </div>
     </div>
@@ -201,7 +201,7 @@ tt
         <div class="card-body">
           <h5 class="tt card-title">T.T.Rapp.grafica</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./pag materie/T.T.Rapp.Grafica.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
+          <a href="/pagine/pag-materie/T.T.Rapp.Grafica.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
         </div>
       </div>
     </div>
@@ -211,11 +211,10 @@ tt
         <div class="card-body">
           <h5 class="tt card-title">Scienze Tecniche Applicate</h5>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-          <a href="./pag materie/Scienze Tecniche Applicate.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
+          <a href="/pagine/pag-materie/Scienze-Tecniche-Applicate.html" class="bb btn btn-outline-primary btn-lg">Vai ai contenuti</a>
         </div>
       </div>
     </div>
-
   </div>
 </div>
 </div>
